--- a/pitbike/index.html
+++ b/pitbike/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Прокат питбайков </title>
+    <title>Прокат питбайков</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -42,10 +42,7 @@
     </section>
     <div class="video">
       <video loop muted autoplay poster="video/plane.jpg" class="video__body">
-        <source
-          src="img/video.mp4"
-          type="video/mp4"
-        />
+        <source src="img/video.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="textVideo">
@@ -145,9 +142,9 @@
               <img src="img/r2.jpg" alt="" class="review__img" />
               <p class="review__name">Дима</p>
               <p class="review__text">
-                Решили покататься с девушкой на питбайках, ребята все рассказали и показали.
-                Прокладывают безопасные но в то же время интересные маршруты.
-                Масса удовльствия, рекомендую!
+                Решили покататься с девушкой на питбайках, ребята все рассказали
+                и показали. Прокладывают безопасные но в то же время интересные
+                маршруты. Масса удовльствия, рекомендую!
               </p>
             </div>
           </div>
@@ -196,7 +193,8 @@
                 <p class="step__num">3</p>
                 <p class="step__title">Покатушки</p>
                 <p class="step__text">
-                  Дальше питбайк в вашем распоряжении. Вы предоставленные себе (в пределах разумного).
+                  Дальше питбайк в вашем распоряжении. Вы предоставленные себе
+                  (в пределах разумного).
                 </p>
               </div>
             </div>
@@ -272,7 +270,10 @@
                   <svg class="social__icon">
                     <use xlink:href="img/sprite.svg#vk"></use></svg
                 ></a>
-                <a target="_blank" href="https://www.instagram.com/pitbike.omsk/">
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/pitbike.omsk/"
+                >
                   <svg class="social__icon">
                     <use xlink:href="img/sprite.svg#inst"></use></svg
                 ></a>
