--- a/index.html
+++ b/index.html
@@ -1,23 +1,76 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title></title>
+    <meta name="title" content="" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico>
-    <title>shop</title>
-    <link href=./css/app.0505fb24.css rel=preload as=style>
-    <link href=./js/app.d43019c9.js rel=preload as=script>
-    <link href=./js/chunk-vendors.2348101f.js rel=preload as=script>
-    <link href=./css/app.0505fb24.css rel=stylesheet>
-</head>
-
-<body><noscript><strong>We're sorry but shop doesn't work properly without JavaScript enabled. Please enable it to
-            continue.</strong></noscript>
-    <div id=app></div>
-    <script src=./js/chunk-vendors.2348101f.js></script>
-    <script src=./js/app.d43019c9.js></script>
-</body>
-
+  <body>
+    <div class="container">
+      <header class="header cart cart_small">
+        <a href="" class="logo">SHINGAREV</a>
+      </header>
+      <section class="main cart">
+        <div class="main__inner">
+          <p class="greeting">Привет, меня зовут Александр</p>
+          <h1 class="title">Я WEB разработчик</h1>
+          <button class="button">Связаться</button>
+        </div>
+      </section>
+      <section class="about cart">
+        <div class="col">
+          <p class="about__text">
+            Я занмаюсь разработкой уже больше года, за это время реализовал ни один десяток сайтов
+            различной сложности и помог большому количеству людей.
+          </p>
+        </div>
+        <div class="col">
+          <div class="about__img"></div>
+        </div>
+      </section>
+      <section class="cases cart">
+        <div class="col">
+          <h2 class="sectionTitle">Мои работы</h2>
+          <a target="_blank" href="https://alshiga.github.io/kia" class="link">Киа</a>
+          <a target="_blank" href="https://advent-space.ru" class="link">Адвент</a>
+          <a target="_blank" href="https://alshiga.github.io/pitbike" class="link">Питбайк Омск</a>
+          <a target="_blank" href="https://gk-psr.ru/" class="link">ГК Пром системс Рус</a>
+          <a target="_blank" href="http://shingarev.site/alexandr" class="link">Шингарёв.сайт</a>
+        </div>
+        <div class="col">
+          <a target="_blank" href="https://alshiga.github.io/lawyer" class="link">Автоюрист</a>
+          <a target="_blank" href="https://sportdrive55.ru/" class="link">Спортдрайв</a>
+          <a target="_blank" href="https://holodplus55.ru/" class="link">Холод плюс</a>
+          <a target="_blank" href="https://alshiga.github.io/skk" class="link">СКК Блинова</a>
+        </div>
+      </section>
+      <section class="contacts cart">
+        <div class="col">
+          <h2 class="sectionTitle">Контакты</h2>
+          <a href="phone:+79994588637" class="link">8 999 458 86 37</a>
+          <a href="mailto:shingarev5000@mail.ru" class="link">shingarev5000@mail.ru</a>
+          <a href="https://wa.me/79994588637" class="link">wa.me/79994588637</a>
+          <a href="https://ttttt.me/AlexShiga" class="link">ttttt.me/AlexShiga</a
+          >
+        </div>
+        <div class="col">
+          <a href="https://vk.com/al.shinga" class="link">vk.com/al.shinga</a>
+          <a href="https://www.instagram.com/aleshiga/" class="link">instagram.com/aleshiga</a>
+          <a href="https://github.com/AlShiga" class="link">github.com/AlShiga</a>
+          <a href="https://codepen.io/AlShi" class="link">codepen.io/AlShi</a>
+        </div>
+      </section>
+    </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
