--- a/WG/index.html
+++ b/WG/index.html
@@ -632,17 +632,17 @@
             <div class="company">
               <a href="" class="company__item"
                 ><img
-                  src="//wows-static-production.gcdn.co/wowsp/80a8ce9e/footer/images/wg_logo_footer.png"
+                  src="https://wows-static-production.gcdn.co/wowsp/80a8ce9e/footer/images/wg_logo_footer.png"
                   alt="Wargaming.net"
               /></a>
               <a href="" class="company__item"
                 ><img
-                  src="//wows-static-production.gcdn.co/wowsp/80a8ce9e/footer/images/bw_logo_footer.png"
+                  src="https://wows-static-production.gcdn.co/wowsp/80a8ce9e/footer/images/bw_logo_footer.png"
                   alt="BigWorldTech"
               /></a>
               <a href="" class="company__item"
                 ><img
-                  src="//wows-static-production.gcdn.co/wowsp/80a8ce9e/footer/images/rating_esrb.png"
+                  src="https://wows-static-production.gcdn.co/wowsp/80a8ce9e/footer/images/rating_esrb.png"
                   alt=""
               /></a>
             </div>
