--- a/grandioso/contacts.html
+++ b/grandioso/contacts.html
@@ -42,8 +42,8 @@
         <nav class="heading__menu heading__menu_blue">
             <div class="container">
                 <ul class="heading__menuInner">
-                    <li class="heading__menuItem"><a href="/news.html">Новости</a></li>
-                    <li class="heading__menuItem"><a href="/about.html">О нас</a></li>
+                    <li class="heading__menuItem"><a href="news.html">Новости</a></li>
+                    <li class="heading__menuItem"><a href="about.html">О нас</a></li>
                     <li class="heading__menuItem heading__menuItem_active">Контакты</li>
                 </ul>
             </div>
