--- a/grandioso/news.html
+++ b/grandioso/news.html
@@ -42,8 +42,8 @@
             <div class="container">
                 <ul class="heading__menuInner">
                     <li class="heading__menuItem heading__menuItem_active">Новости</li>
-                    <li class="heading__menuItem"><a href="/about.html">О нас</a></li>
-                    <li class="heading__menuItem"><a href="/contacts.html">Контакты</a></li>
+                    <li class="heading__menuItem"><a href="about.html">О нас</a></li>
+                    <li class="heading__menuItem"><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </nav>
