--- a/grandioso/about.html
+++ b/grandioso/about.html
@@ -42,9 +42,9 @@
         <nav class="heading__menu heading__menu_blue">
             <div class="container">
                 <ul class="heading__menuInner">
-                    <li class="heading__menuItem"><a href="/news.html">Новости</a></li>
+                    <li class="heading__menuItem"><a href="news.html">Новости</a></li>
                     <li class="heading__menuItem heading__menuItem_active">О нас</li>
-                    <li class="heading__menuItem"><a href="/contacts.html">Контакты</a></li>
+                    <li class="heading__menuItem"><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </nav>
