--- a/grandioso/portfolio.html
+++ b/grandioso/portfolio.html
@@ -12,19 +12,20 @@
 
 <body>
     <header class="header">
-        <div class="container"></div>
-        <div class="header__inner">
-            <div class="burger">
-                <img src="./img/burger.svg" alt="" class="burger__img">
-                <p class="p1 burger__text">Каталог</p>
-            </div>
-            <img src="./img/logo.svg" alt="" class="logo">
-            <div class="header__right">
-                <div class="search search_header">
-                    <img src=" ./img/loupe.svg" alt="" class="">
+        <div class="container">
+            <div class="header__inner">
+                <div class="burger">
+                    <img src="./img/burger.svg" alt="" class="burger__img">
+                    <p class="p1 burger__text">Каталог</p>
                 </div>
-                <div class="basket">
-                    <img src=" ./img/basket.svg" alt="">
+                <img src="./img/logo.svg" alt="" class="logo">
+                <div class="header__right">
+                    <div class="search search_header">
+                        <img src=" ./img/loupe.svg" alt="" class="">
+                    </div>
+                    <div class="basket">
+                        <img src=" ./img/basket.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
