--- a/grandioso/case.html
+++ b/grandioso/case.html
@@ -57,7 +57,7 @@
             autoplay: true,
             arrows: false,
             dots: true,
-            dotsClass: "pageCase__galeryDots"
+            dotsClass: "sliderDots pageCase__galeryDots"
         });
     </script>
 </body>
